# candor

./: .gitignore  CLAUDE.md  README.md  REPORT.txt  ai_agent_requirements_document.md  ai_agent_requirements_v3.md  pyproject.toml  standardized_roles_analysis.md  the_gap.md  top25_us_companies_executive_teams.txt
config/: default.yaml
src/: main.py
src/advocate/: __init__.py  __main__.py  brief.py  impact.py  translator.py
src/agents/financial/: agent.py
src/agents/legal/: agent.py
src/agents/market/: agent.py
src/agents/operations/: agent.py
src/agents/orchestrator/: agent.py
src/agents/people/: agent.py
src/agents/technology/: agent.py
src/compass/: compass.py
src/models/: compass.py  decisions.py  messages.py
src/shared/: base_agent.py  bus.py  memory.py
src/simulator/: __init__.py  __main__.py  companies.py  companies_extended.py  display.py  engine.py  models.py  pdf_report.py  report.py
tests/: test_advocate.py  test_agents.py  test_compass.py  test_simulator.py
